# TestSMITApp

./: .env.db.example  .env.example  .gitignore  README.md  docker-compose.yml  test.json
backend/: Dockerfile  Makefile  pyproject.toml
backend/src/: alembic.ini
backend/src/app/: exceptions.py  main.py
backend/src/app/api/: cargo_rate.py  insurance.py
backend/src/app/core/: db.py  decorators.py  dependiences.py  exceptions.py  schemas.py  utils.py  validators.py
backend/src/app/core/settings/: api.py  base.py  db.py
backend/src/app/models/: __init__.py  cargo_rate.py
backend/src/app/schemas/: cargo.py  cargo_rate.py
backend/src/app/services/: cargo_rate.py  insurance.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2024-12-05_0bbbff4620f2_init_add_cargo_model.py
